# voice2md

./: .gitignore  README.md  config.yaml  pyproject.toml
prompts/: collaborator_prompt.md  referee_prompt.md
scripts/: com.voice2md.plist.template  install_deps.sh  install_launchd.sh  uninstall_launchd.sh
src/voice2md/: __main__.py  archive.py  cli.py  codex_runner.py  config.py  logging_setup.py  markdown.py  pipeline.py  router.py  stable.py  state.py  transcribe.py  util.py  watcher.py
tests/: test_cli_args.py  test_codex_runner_args.py  test_router.py  test_stable.py  test_state.py
