[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice2md"
version = "0.1.0"
description = "Local-first voice notes to Markdown topic notebooks with optional Codex referee commentary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
voice2md = "voice2md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
